public class ReprodutorMusical implements iPhone {

    public void tocar() {
        System.out.println("Tocando música");
    }

    public void selecionarMusica(String musica){
        System.out.println("A música selecionada é " + musica);
    }

}
